# optics-by-example

./: README.md  default.nix  optics-by-example.cabal  optics-by-example.nix  shell.nix
app/: Playground.hs
nix/: nixpkgs.json  nixpkgs.nix
src/02-optics/: Optics.md
src/03-lenses/: Lenses.hs
src/04-polymorphic-optics/: PolymorphicOptics.hs
src/05-operators/: Operators.hs
src/06-folds/: Folds.hs
src/07-traversals/: Traversals.hs
src/08-indexable-structures/: IndexableStructures.hs
src/09-prisms/: Prisms.hs
src/10-isos/: Isos.hs
src/11-indexed-optics/: IndexedOptics.hs
src/12-optics-and-monads/: OpticsAndMonads.hs
src/13-classy-lenses/: ClassyLenses.hs
src/14-appendices/: operator-cheat-sheet.md  optic-compatibility-chart.md  optic-composition-table.md  optic-ingredients.md
src/exercises/: Exercise1.hs
test/: LensPropertiesSpec.hs
