cabal-version:       >=1.10

name:                optics-by-example
version:             0.1.0.0
license-file:        LICENSE
author:              monadplus
maintainer:          arnauabella@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable optics-by-example
  main-is:             Main.hs
  build-depends:
      base               >=4.9 && <4.11
    , optics-by-example
  ghc-options: -Wall -threaded -O3 -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  default-language: Haskell2010

library
  build-depends:
       async             >=2.2.2    && <3.0.0
     , base              >=4.9      && <4.11
     , bytestring        >=0.10.8.2 && <0.11.0.0
     , containers        >=0.5.0.1  && <0.7
     , directory         >=1.3.0.0  && <1.4.0.0
     , filepath          >=1.4.0.0  && <1.5.0.0
     , http-conduit      >=2.3.7.1  && <2.4.0.0
     , lens              >=4.0      && <5.0
     , lens-aeson        >=1.0.1    && <1.2
     , mtl               >=2.0.0.0  && <2.3
     , network-simple    >=0.4      && <0.5
     , stm               >=2.5.0.0  && <2.6.0.0
     , text              >=1.2.4.0  && <2.0.0.0
     , time              >=1.8.0.1  && <2.0.0.0
  exposed-modules:
  other-modules:
  default-extensions:
      OverloadedStrings
  ghc-options: -O3 -Wall
  hs-source-dirs: src
  default-language: Haskell2010
