cabal-version:       >=1.10

name:                optics-by-example
version:             0.1.0.0
license-file:        LICENSE
author:              monadplus
maintainer:          arnauabella@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable optics-by-example
  main-is:             Main.hs
  build-depends:
      base               >=4.9 && <4.11
    , optics-by-example
  ghc-options: -Wall -threaded -O3 -rtsopts -with-rtsopts=-N
  hs-source-dirs: app
  default-language: Haskell2010

library
  build-depends:
       async             >=2.2.2    && <3.0.0
     , base              >=4.9      && <4.11
     , bytestring        >=0.10.8.2 && <0.11.0.0
     , containers        >=0.5.0.1  && <0.7
     , directory         >=1.3.0.0  && <1.4.0.0
     , filepath          >=1.4.0.0  && <1.5.0.0
     , lens              >=4.0      && <5.0
     , lens-aeson        >=1.0.1    && <1.2
     , mtl               >=2.0.0.0  && <2.3
     , stm               >=2.5.0.0  && <2.6.0.0
     , text              >=1.2.4.0  && <2.0.0.0
     , time              >=1.8.0.1  && <2.0.0.0
  exposed-modules:
      Lenses
      PolymorphicOptics
      Operators
  other-modules:
  default-extensions:
      OverloadedStrings
  ghc-options: -O3 -Wall
  hs-source-dirs:
    src/02-optics
    src/03-lenses
    src/04-polymorphic-optics
    src/05-operators
    src/06-folds
    src/07-traversals
    src/08-indexable-structures
    src/09-prisms
    src/10-isos
    src/11-indexed-optics
    src/12-optics-and-monads
    src/13-classy-lenses
  default-language: Haskell2010

test-suite optics-by-example-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
       base              >=4.9      && <4.11
     , generic-random    >=1.3.0.0  && <1.4.0.0
     , hspec             >=2.6.0    && <2.8
     , lens              >=4.0      && <5.0
     , lens-aeson        >=1.0.1    && <1.2
     , lens-properties   >=4.11     && <4.12
     , QuickCheck        >=2.12     && <2.14
  other-modules:
      LensPropertiesSpec
  hs-source-dirs: test
  default-language: Haskell2010
