cabal-version:       3.0
name:                optics-by-example
version:             0.1.0.0
license-file:        LICENSE
author:              monadplus
maintainer:          arnauabella@gmail.com
build-type:          Simple
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/monadplus/optics-by-example

common common-options
  ghc-options: -Wall
               -O3
  default-language: Haskell2010

common common-dependencies
  build-depends: base            >=4.9     && <4.14
               , lens            >=4.0     && <5.0
               , lens-aeson      >=1.0.1   && <1.2
               , lens-regex-pcre >=0.3.1.0 && <1.2

executable optics-by-example
  import: common-dependencies
  import common-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  optics-by-example
  ghc-options:    -threaded
                  -rtsopts
                  -with-rtsopts=-N

library
  import: common-dependencies
  import common-options
  build-depends:
       async             >=2.2.2    && <3.0.0
     , bytestring        >=0.10.8.2 && <0.11.0.0
     , containers        >=0.5.0.1  && <0.7
     , directory         >=1.3.0.0  && <1.4.0.0
     , filepath          >=1.4.0.0  && <1.5.0.0
     , mtl               >=2.0.0.0  && <2.3
     , stm               >=2.5.0.0  && <2.6.0.0
     , text              >=1.2.3.0  && <2.0.0.0
     , time              >=1.8.0.1  && <2.0.0.0
  exposed-modules:
  other-modules:
      Lenses
      PolymorphicOptics
      Operators
      Folds
      Traversals
      IndexableStructures
      Prisms
      Isos
      IndexedOptics
      OpticsAndMonads
      ClassyLenses
  default-extensions:
      OverloadedStrings
  hs-source-dirs:
    src/02-optics
    src/03-lenses
    src/04-polymorphic-optics
    src/05-operators
    src/06-folds
    src/07-traversals
    src/08-indexable-structures
    src/09-prisms
    src/10-isos
    src/11-indexed-optics
    src/12-optics-and-monads
    src/13-classy-lenses

test-suite optics-by-example-tests
  import: common-dependencies
  import common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: generic-random    ==1.2.0.0
               , hspec             >=2.6.0    && <2.8
               , lens-properties   >=4.11     && <4.12
               , QuickCheck        >=2.12     && <2.14
  other-modules: LensPropertiesSpec
  ghc-options:   -threaded
                 -rtsopts
                 -with-rtsopts=-N
